--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width initial-scale=1.0" />
-    <title>Sully</title>
+    <title>Let me get a dollar</title>
     <link rel="stylesheet" href="/style.css" />
     <script defer src="/bundle.js"></script>
+    <script src="https://www.paypal.com/sdk/js?client-id=Ac6VnrXCIA5n6ADWAc_W8omG9OQkUdUOEFMQMeLjXC29Kyb3AesJX0bppw3_43JAT4FcZrDOnUrPLQ_N&currency=USD"></script>
   </head>
   <body>
     <div id="app"></div>
