paypal setup, and style changes

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <title>Let me get a dollar</title>
     <link rel="stylesheet" href="/style.css" />
     <script defer src="/bundle.js"></script>
-    <script src="https://www.paypal.com/sdk/js?client-id=Ac6VnrXCIA5n6ADWAc_W8omG9OQkUdUOEFMQMeLjXC29Kyb3AesJX0bppw3_43JAT4FcZrDOnUrPLQ_N&currency=USD"></script>
+    <script src="https://www.paypal.com/sdk/js?client-id=Ac6VnrXCIA5n6ADWAc_W8omG9OQkUdUOEFMQMeLjXC29Kyb3AesJX0bppw3_43JAT4FcZrDOnUrPLQ_N&currency=USD&enable-funding=venmo"></script>
   </head>
   <body>
     <div id="app"></div>
